add yaxis min max

--- a/index.html
+++ b/index.html
@@ -351,6 +351,12 @@
                                 display: true,
                                 labelString: 'seconds'
                             }
+                        }],
+                        yAxes: [{
+                            ticks: {
+                                suggestedMin: 10,
+                                suggestedMax: 90
+                            }
                         }]
                     },
                     elements: {
