--- a/index.html
+++ b/index.html
@@ -2,120 +2,158 @@
 <html>
 
 <head>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
   <script src="compute.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
   <div class="wrapper">
-    <div class="square" style="float: left;">
-      <h1>Engine Constants</h1>
-      <p>
-        Required Fuel
-        <input id="reqFuel" step="0.1" type="number" min="0" max="25.5" value="12.0" onchange="compute();">
-      </p>
-      <p>
-        Control Algorithm
-      </p>
-      <p>
-        Squirts Per Engine Cycle
-        <select id="nSquirts" onchange="compute()">
-          <option value=1 selected>1</option>
-          <option value=2>2</option>
-          <option value=3>3</option>
-          <option value=4>4</option>
-          <option value=5>5</option>
-          <option value=6>6</option>
-          <option value=8>8</option>
-        </select>
-      </p>
-      <p>
-        Injector Staging
-        <select id="alternate" onchange="compute()">
-          <option value=0>Simultaneous</option>
-          <option value=1 selected>Alternating</option>
-        </select>
-      </p>
-      <p>
-        Engine Stroke
-        <select id="strokes" onchange="compute()">
-          <option value=0 selected>4-stroke</option>
-          <option value=1>2-stroke</option>
-        </select>
-      </p>
-      <p>
-        Number of Cylinders
-        <select id="nCylinders" onchange="disablePaired(this.value); compute();">
-          <option value=1>1</option>
-          <option value=2>2</option>
-          <option value=3>3</option>
-          <option value=4 selected>4</option>
-          <option value=5>5</option>
-          <option value=6>6</option>
-          <option value=8>8</option>
-        </select>
-      </p>
-      <p>
-        Injector Port Type
-      </p>
-      <p>
-        Number of Injectors
-        <select id="nInjectors" onchange="disablePaired(this.value); compute();">
-          <option value=1>1</option>
-          <option value=2>2</option>
-          <option value=3>3</option>
-          <option value=4 selected>4</option>
-          <option value=5>5</option>
-          <option value=6>6</option>
-          <option value=8>8</option>
-        </select>
-      </p>
-      <p>
-        Engine Type
-      </p>
-      <p>
-        Injector Layout
-        <select id="paired" onchange="compute()">
-          <option value=0>Paired</option>
-          <option value=1 selected>Semi-Sequential</option>
-          <option value=3 selected>Sequential</option>
-        </select>
-      </p>
-    </div>
-
-    <div class="square" style="float: right; margin-left:5px;">
-      <h1>Results</h1>
-      <p>PW:
-        <b class="out" id="PW"></b>ms
-      </p>
-      <p>Full Cycle:
-        <b class="out" id="cycle"></b>°
-      </p>
-      <br>
-      <p>Inj1:
-        <b class="out" id="inj1"></b>°
-      </p>
-      <p>Inj2:
-        <b class="out" id="inj2"></b>°
-      </p>
-      <p>Inj3:
-        <b class="out" id="inj3"></b>°
-      </p>
-      <p>Inj4:
-        <b class="out" id="inj4"></b>°
-      </p>
-      <p>Inj5:
-        <b class="out" id="inj5"></b>°
-      </p>
-      <p>Inj6:
-        <b class="out" id="inj6"></b>°
-      </p>
-      <p>Inj7:
-        <b class="out" id="inj7"></b>°
-      </p>
-      <p>Inj8:
-        <b class="out" id="inj8"></b>°
-      </p>
+    <div class="wrapper" style="float: left;">
+      <div class="wrapper" style="float: left;">
+        <div class="square" style="float: top; width: 250px;">
+          <h1>Engine Constants</h1>
+          <p>
+            Required Fuel
+            <input id="reqFuel" step="0.1" type="number" min="0" max="25.5" value="12.0" onchange="compute();">
+          </p>
+          <p>
+            Control Algorithm
+            <select disabled>
+              <option>MAP</option>
+            </select>
+          </p>
+          <p>
+            Squirts Per Engine Cycle
+            <select id="nSquirts" onchange="compute()">
+              <option value=1 selected>1</option>
+              <option value=2>2</option>
+              <option value=3>3</option>
+              <option value=4>4</option>
+              <option value=5>5</option>
+              <option value=6>6</option>
+              <option value=8>8</option>
+            </select>
+          </p>
+          <p>
+            Injector Staging
+            <select id="alternate" onchange="compute()">
+              <option value=0>Simultaneous</option>
+              <option value=1 selected>Alternating</option>
+            </select>
+          </p>
+          <p>
+            Engine Stroke
+            <select id="strokes" onchange="compute()">
+              <option value=0 selected>4-stroke</option>
+              <option value=1>2-stroke</option>
+            </select>
+          </p>
+          <p>
+            Number of Cylinders
+            <select id="nCylinders" onchange="disablePaired(this.value); compute();">
+              <option value=1>1</option>
+              <option value=2>2</option>
+              <option value=3>3</option>
+              <option value=4 selected>4</option>
+              <option value=5>5</option>
+              <option value=6>6</option>
+              <option value=8>8</option>
+            </select>
+          </p>
+          <p>
+            Injector Port Type
+            <select disabled>
+              <option>Port</option>
+            </select>
+          </p>
+          <p>
+            Number of Injectors
+            <select id="nInjectors" onchange="disablePaired(this.value); compute();">
+              <option value=1>1</option>
+              <option value=2>2</option>
+              <option value=3>3</option>
+              <option value=4 selected>4</option>
+              <option value=5>5</option>
+              <option value=6>6</option>
+              <option value=8>8</option>
+            </select>
+          </p>
+          <p>
+            Engine Type
+            <select id="engine_type" onchange="compute()" disabled>
+              <option value=0 selected>Even fire</option>
+              <option value=1>Odd fire</option>
+            </select>
+          </p>
+          <p>
+            Injector Layout
+            <select id="paired" onchange="compute()">
+              <option value=0>Paired</option>
+              <option value=1 selected>Semi-Sequential</option>
+              <option value=3>Sequential</option>
+            </select>
+          </p>
+        </div>
+        <div class="square" style="float: bottom; margin-top: 5px; width: 250px;">
+          <h1>Other Constants</h1>
+          <p>
+            INJ_CHANNELS
+            <select id="INJ_CHANNELS" onchange="compute()">
+              <option value=0>0</option>
+              <option value=1>1</option>
+              <option value=2>2</option>
+              <option value=3>3</option>
+              <option value=4 selected>4</option>
+              <option value=5>5</option>
+              <option value=6>6</option>
+              <option value=7>7</option>
+              <option value=8>8</option>
+            </select>
+          </p>
+          <p>
+            Duty Cycle
+            <input id="dcPercent" step="1" type="number" min="0" max="100" value="20" onchange="compute();">
+          </p>
+        </div>
+      </div>
+      <div class="square" style="float: right; margin-left:5px;">
+        <canvas id="myChart" width="500" height="500"></canvas>
+      </div>
+      <!--div class="square" style="float: right; margin-left:5px;">
+        <h1>Results</h1>
+        <p>PW:
+          <b class="out" id="PW"></b>ms
+        </p>
+        <p>Full Cycle:
+          <b class="out" id="cycle"></b>°
+        </p>
+        <br>
+        <p>Inj1:
+          <b class="out" id="inj1"></b>°
+        </p>
+        <p>Inj2:
+          <b class="out" id="inj2"></b>°
+        </p>
+        <p>Inj3:
+          <b class="out" id="inj3"></b>°
+        </p>
+        <p>Inj4:
+          <b class="out" id="inj4"></b>°
+        </p>
+        <p>Inj5:
+          <b class="out" id="inj5"></b>°
+        </p>
+        <p>Inj6:
+          <b class="out" id="inj6"></b>°
+        </p>
+        <p>Inj7:
+          <b class="out" id="inj7"></b>°
+        </p>
+        <p>Inj8:
+          <b class="out" id="inj8"></b>°
+        </p>
+      </div-->
     </div>
   </div>
 
